# autoregressive

./: .gitignore  Cargo.toml  README.md
examples/: univariate.rs
src/: lib.rs
